# prod-fs

./: .gitattributes  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: release.yaml
experiments/: README.md
experiments/real/: ProD_loocv.py  ProD_real.py  combine_loocv.py  featureSelection_real.py
experiments/real/NSL-KDD/: ProD_NSLKDD.py  combine_fss.py  featureSelection_NSLKDD.py  traintest.py
experiments/real/NSL-KDD/matlabFS/: IMRelief_1.p  LHR.p  LM_construction2.m  featureSelection_NSLKDD.m
experiments/real/PrepDataset/: prep_datasets.py
experiments/real/matlabFS/: featureSelection.m  featureSelection_mRMR.m
experiments/synthetic/Electrical/: ProD_10stratifiedcv.py  ProD_Electrical.py  combine_fss.py  evaluate_fss.py
experiments/synthetic/SM/: 10stratifiedcv.py  ProD_10stratifiedcv.py  ProD_SM.py  combine_fss.py  evaluate_fss.py  featureSelection_SM.py  process_SM.py
experiments/synthetic/matlabFS/: featureSelection_Electrical.m  featureSelection_SM.m  featureSelection_mRMR_Electrical.m  featureSelection_mRMR_ElectricalDiscrete.m  featureSelection_mRMR_SM.m
src/pdeseg/: pde_segregate.py
src/prod_fs/: prodfs.py
src/prodfs/: __init__.py
