[project]
name = "prod-fs"
version = "1.0.5"
description = "ProD: A visualizable filter-feature selection method based on prodding the class probability densities for overlapping"
readme = "README.md"
authors = [
    { name = "RenZhen95", email = "j-liaw@hotmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "numpy<2.0.0",
    "scipy>=1.16.3",
]

[project.scripts]
prod-fs = "prodfs:main"

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
]
